# zipper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PROJECT_GOVERNANCE.md  README.md  ZIPPER_ARCHITECTURE.md
data/rag_index/: chunks.json  metadata.json
docs/: AI_BOOTSTRAP_PROMPT.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  ENGINEERING_RULES.md  PLUGIN_SYSTEM.md  PRD_ZIPPER_WORKSPACE.md  PROJECT_ROADMAP.md  PROJECT_RULES.md  RAG_ARCHITECTURE.md
src/: main.cpp
src/backend/: llama_backend.cpp  llama_backend.hpp
src/core/: context_manager.cpp  context_manager.hpp  conversation_manager.cpp  conversation_manager.hpp  crash_handler.cpp  crash_handler.hpp  inference_backend.hpp  logger.cpp  logger.hpp  memory_manager.cpp  memory_manager.hpp  prompt_builder.cpp  prompt_builder.hpp  runtime_manager.cpp  runtime_manager.hpp  session_manager.cpp  session_manager.hpp
src/rag/context_builder/: context_builder.cpp  context_builder.hpp
src/rag/document_loader/: document_loader.cpp  document_loader.hpp
src/rag/embedding/: embedding_backend.cpp  embedding_backend.hpp  embedding_generator.cpp  embedding_generator.hpp
src/rag/retriever/: retriever.cpp  retriever.hpp
src/rag/text_chunker/: text_chunker.cpp  text_chunker.hpp
src/rag/vector_store/: vector_store.cpp  vector_store.hpp
src/tools/: tool.hpp  tool_executor.cpp  tool_executor.hpp  tool_manager.hpp  tool_parser.cpp  tool_parser.hpp  tool_registry.cpp  tool_registry.hpp
src/tools/calculator/: calculator_tool.cpp  calculator_tool.hpp
src/tools/date/: date_tool.cpp  date_tool.hpp
src/tools/file_reader/: file_reader_tool.cpp  file_reader_tool.hpp
src/tools/stock/: stock_tool.cpp  stock_tool.hpp
src/tools/system_info/: system_info_tool.cpp  system_info_tool.hpp
src/tools/web_search/: web_search_tool.cpp  web_search_tool.hpp
tools/: tool.hpp  tool_executor.cpp  tool_executor.hpp  tool_registry.cpp  tool_registry.hpp
